--- a/4clojure-oriented-prez/README.org
+++ b/4clojure-oriented-prez/README.org
@@ -9,10 +9,12 @@ The final image is intended to be viewed with [[prezi.com]], it will allow
 to build a path of the viewing of the image in advance (zooming,
 dezooming, ...).
 
-To get an idea of what it could look like, check a previous
-presentation of mine
-http://prezi.com/kdsbpq1t8dm8/jenkins-cleanup-2/. It was done exacly
-with the same process than this presentation: All authoring in yed +
+To get an idea of what it could look like, check [[http://prezi.com/kdsbpq1t8dm8/jenkins-cleanup-2/][a previous presentation of mine]]
+. It was done exacly
+with the same process than this presentation: 
+- All authoring in done in yEd
+- And then build the view path in prezi 
+
 prezi at the end for the viewing.
 
 * How to use the sources? 
@@ -32,3 +34,19 @@ In order to edit the doc, you need:
 - Please note that there is a image diffing functionality in github,
   that allow to check the difference between versions of an image. We
   should use it!
+
+* TODO [0%]
+
+** TODO primitive types: show analogy with Java
+
+We can use a slide of a presentation by Stuart Halloway (clojure java
+interop or something like that).
+
+It shows a matrix of the primitive type of clojure/java
+
+** TODO the prez should be in english
+
+it's in french/english (frenglish?) now :)
+
+** TODO build the path with prezi, and then export it to an exec (will be usefull if there is a network failure)
+
