--- a/4clojure-oriented-prez/README.org
+++ b/4clojure-oriented-prez/README.org
@@ -31,7 +31,8 @@ In order to edit the doc, you need:
 
 - Please note that there is a image diffing functionality in github,
   that allow to check the difference between versions of an image. We
-  should use it!
+  should use it! It means committing and pushing the final image
+  (yes committing a binary: bad! :) to be able to github's diff it.
 
 * Stuff to do  [0%]
 
