--- a/4clojure-oriented-prez/README.org
+++ b/4clojure-oriented-prez/README.org
@@ -65,7 +65,6 @@ it's in french/english (frenglish?) now :)
 - Because otherwise it is not obvious that clojure Atlas is really usefull
 
 
-
 ** TODO better present clojure docs
 
 See comment for clojure atlas
@@ -73,4 +72,9 @@ See comment for clojure atlas
 ** TODO Create a github page with all the links that will be shown in the prez
 
 We could even use this repo
+
+** TODO Prepare a google spreadsheet to store the name of the 4clojure participant
+
+That way we will be able to show to everyone during the subscription
+phase, and everybody will be able to follow everybody easilyer
 
