--- a/4clojure-oriented-prez/README.org
+++ b/4clojure-oriented-prez/README.org
@@ -102,7 +102,8 @@ that make it impressive to solve in 5mn.
 7) Now pass the tests to =future-fact=, and quicly explain the nice
    TODO list feature (can even say: "hey it's even better than JUnit's =@Ignore=)
 
-8) Solve the problem quickly
+8) Solve the problem quickly: in here it could be nice to use
+   clojuredocs and/or clojureatlas
 
 9) Go the 4clojure page
 
