--- a/4clojure-oriented-prez/README.org
+++ b/4clojure-oriented-prez/README.org
@@ -84,6 +84,17 @@ Links:
 That way we will be able to show to everyone during the subscription
 phase, and everybody will be able to follow everybody easilyer
 
+** TODO prepare to solve an easy problem in a few minute
+
+To demonstrate the usage of 4clojrue / clojure atlas / clojure docs
+
+** TODO show how we handle the source code of 4clojure (github)
+
+We use github, ...
+
+Should we show that ? (cheating, ...)
+
+
 ** TODO prepare to solve a 5 mn hard exercise, with all the tools
 
 Prepare in advance a "demo" of what you could do with clojure with
