--- a/4clojure-oriented-prez/README.org
+++ b/4clojure-oriented-prez/README.org
@@ -163,3 +163,6 @@ For the people to experiment online !
 "Please don't easitate to email us to get help if you get stuck"
 
 "maybee point to the clojure paris user group"
+** TODO we must also tell people to follow strong people
+
+Like cgrand, people that will show standard/canonical solutions
